--- a/docs/todo.yaml
+++ b/docs/todo.yaml
@@ -5,7 +5,7 @@ info:
 servers:
   - url: 'http://localhost:8080'
 paths:
-  /todos:
+  '/todos/{userId}':
     get:
       summary: Your GET endpoint
       tags:
@@ -23,9 +23,11 @@ paths:
                 example-1:
                   value:
                     - id: 1
+                      user_id: 1
                       deadline: '2020-09-01T00:00:00Z'
                       todo: test
                     - id: 2
+                      user_id: 1
                       deadline: '2020-09-01T00:00:00Z'
                       todo: test2
         '404':
@@ -56,15 +58,27 @@ paths:
               example-1:
                 value:
                   id: 0
+                  user_id: 1
                   deadline: '2020-09-01T00:00:00Z'
                   todo: test
       tags:
         - Todo作成
-  '/todos/{id}':
+    parameters:
+      - schema:
+          type: string
+        name: userId
+        in: path
+        required: true
+  '/todos/{userId}/{id}':
     parameters:
       - schema:
           type: string
         name: id
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: userId
         in: path
         required: true
     get:
@@ -82,6 +96,7 @@ paths:
                 example-1:
                   value:
                     id: 1
+                    user_id: 1
                     deadline: '2020-09-01T00:00:00Z'
                     todo: test
         '404':
@@ -110,6 +125,7 @@ paths:
               example-1:
                 value:
                   id: 0
+                  user_id: 1
                   deadline: '2020-09-01T00:00:00Z'
                   todo: testtest
         description: ''
@@ -139,16 +155,42 @@ components:
       properties:
         id:
           type: integer
+        userId:
+          type: string
         deadline:
           type: string
         todo:
           type: string
+      x-examples:
+        example-1:
+          id: 0
+          userId: string
+          deadline: string
+          todo: string
     Affected:
       title: Affected
       type: object
       properties:
         affected:
           type: integer
+    User:
+      title: User
+      type: object
+      properties:
+        id:
+          type: integer
+        email:
+          type: string
+        password:
+          type: string
+        name:
+          type: string
+      x-examples:
+        example-1:
+          id: 0
+          email: string
+          password: string
+          name: string
 tags:
   - name: Todo取得/更新/削除
   - name: Todoリスト取得
